# sct_example_data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
sct_example_data/: __init__.py  __main__.py
